# ai-powered-fraud-detection

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  tests.yml
backend/: .dockerignore  Dockerfile  README.md  env  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: admin.py  auth.py  routes.py  transactions.py
backend/app/ml/: model_loader.py  preprocessor.py  test_model.py  train_model.py
backend/app/models/: __init__.py  database.py  transaction.py  user.py
backend/app/services/: fraud_detector.py
backend/app/utils/: security.py
backend/tests/: test_api.py  test_ml.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.test.js
frontend/src/components/: Dashboard.jsx
frontend/src/services/: api.js
infra/: docker-compose.yml
ml/: explore_dataset.py  validate_dataset.py
