[tool.poetry]
name = "backend"
version = "0.1.0"
description = "AI-powered fraud detection backend"
authors = ["devindawanasinghe <devindawanasinghe@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

# Runtime dependencies

[tool.poetry.dependencies]
python = ">=3.12"

fastapi = "^0.124.2"
uvicorn = { extras = ["standard"], version = "^0.38.0" }
pydantic = "^2.12.5"
pydantic-settings = "^2.0.0" 

sqlalchemy = "^2.0.45"
asyncpg = "^0.31.0"
aioredis = "^2.0.1"

pandas = "^2.3.3"
scikit-learn = "^1.8.0"
joblib = "^1.5.2"

python-dotenv = "^1.2.1"
requests = "^2.32.5"

# Development dependencies

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
httpx = "^0.25.0"
black = "^25.12.0"
isort = "^7.0.0"
mypy = "^1.19.0"

# CLI scripts

[tool.poetry.scripts]
start = "app.main:start"

# Build system (DO NOT TOUCH)

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
